# equation_quadratique

./: cli.py  pyproject.toml
.github/: python-ci.yml
.github/workflows/: python-ci.yml
quadratic/: solver.py
tests/: test_solver.py
