[tool.poetry]
name = "equation-quadratique"
version = "0.1.0"
description = ""
authors = ["Léo Chevalley <leo.chevalley@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
[[tool.poetry.packages]]
include = "quadratic"
